Changes for Javadoc and Gitlab Javadoc job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,14 @@ build:
       -Ddistribution.repository.release=${ARTIFACTORY_URL}/libs-release-local
   only:
     - branches@ics-software/jmasar-service
+    
+pages:
+  script:
+    - sphinx-build -M html docs docs/_build
+    - mv docs/_build/html public
+  artifacts:
+    paths:
+      - public
 
 deploy-staging:
   stage: deploy
