--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<reportOutputDirectory>${project.basedir}</reportOutputDirectory>
+          			<destDir>public</destDir>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
