--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.level.org.springframework=INFO
-logging.level.org.flywaydb=INFO
+#logging.level.org.springframework=INFO
+#logging.level.org.flywaydb=INFO
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximumPoolSize=10
 spring.datasource.hikari.connectionTestQuery=SELECT 1
