--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,2 +1,2 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.flyway.locations=classpath:db/migration/mysql
+spring.flyway.locations=classpath:db/migration/mysql,classpath:db/migration/common
