--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -40,12 +40,13 @@ spec:
               if [ "{{ .Values.phoebusservice }}" = "saveandrestore" ]; then
                 elastic={{ .Values.elasticsearch.network.host }}
                 elasticport={{ .Values.elasticsearch.http.port }}
+                echo "Testing connection to $elastic:$elasticport"
                 until curl --silent --fail http://$elastic:$elasticport/_cluster/health; do
                 echo "Waiting for Elasticsearch $elastic"
                 sleep 4
                 done
                 echo "* Starting save and restore phoebus service Elastic $elastic:$elasticport"
-                java -jar  /phoebus/service-save-and-restore.jar -Delasticsearch.network.host=$elastic -Delasticsearch.http.port=$elasticport
+                java -jar  /phoebus/service-save-and-restore.jar -Delasticsearch.network.host=$elastic -Delasticsearch.http.port=$elasticport -Dlogging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
               
               fi
               if [ "{{ .Values.phoebusservice }}" = "alarmserver" ]; then
