--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          volumeMounts:
+            - name: config
+              mountPath: /config
           command: 
             - sh 
             - -c
@@ -42,13 +45,14 @@ spec:
                 elastichttpport={{ .Values.elasticsearch.http.port }}
                 elasticport={{ .Values.elasticsearch.network.port }}
 
-                echo "Testing connection to $elastic:$elasticport"
+                echo "Testing connection to $elastic:$elastichttpport"
                 until curl --silent --fail http://$elastic:$elastichttpport/_cluster/health; do
                 echo "Waiting for Elasticsearch $elastic"
                 sleep 4
                 done
                 echo "* Starting save and restore phoebus service Elastic $elastic:$elasticport"
-                java -jar  /phoebus/service-save-and-restore.jar -Delasticsearch.network.host={{ .Values.elasticsearch.network.host }} -Delasticsearch.http.port="{{ .Values.elasticsearch.http.port }}" -Dlogging.level.org.springframework=TRACE -Dlogging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+                # java -jar  /phoebus/service-save-and-restore.jar -Delasticsearch.network.host={{ .Values.elasticsearch.network.host }} -Delasticsearch.http.port="{{ .Values.elasticsearch.http.port }}" -Dlogging.level.org.springframework=TRACE -Dlogging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+                java -jar  /phoebus/service-save-and-restore.jar  -Dspring.config.location=file:/config/saveandrestore.properties
               
               fi
               if [ "{{ .Values.phoebusservice }}" = "alarmserver" ]; then
@@ -72,3 +76,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+        - name: config
+          configMap:
+            name: {{ include "phoebus-services-chart.fullname" . }}-config
