--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -9,7 +9,7 @@ data:
       app.name=@project.artifactId@
 
       # The server port for the rest service
-      server.port=8080
+      server.port={{service.restport}}
 
       # Elasticsearch connection parameters
       elasticsearch.network.host={{ .Values.elasticsearch.network.host }}
@@ -21,11 +21,11 @@ data:
       server.servlet.contextPath=/save-restore
 
       # The names of the index to use for save&restore
-      elasticsearch.tree_node.index=saveandrestore_tree
-      elasticsearch.configuration_node.index=saveandrestore_configuration
-      elasticsearch.snapshot_node.index:saveandrestore_snapshot
-      elasticsearch.composite_snapshot_node.index:saveandrestore_composite_snapshot
-      elasticsearch.filter.index:saveandrestore_filter
+      elasticsearch.tree_node.index={{ include "phoebus-services-chart.fullname" . }}-saveandrestore_tree
+      elasticsearch.configuration_node.index={{ include "phoebus-services-chart.fullname" . }}-saveandrestore_configuration
+      elasticsearch.snapshot_node.index:{{ include "phoebus-services-chart.fullname" . }}-saveandrestore_snapshot
+      elasticsearch.composite_snapshot_node.index:{{ include "phoebus-services-chart.fullname" . }}-saveandrestore_composite_snapshot
+      elasticsearch.filter.index:{{ include "phoebus-services-chart.fullname" . }}-saveandrestore_filter
 
       ############################## REST Logging ###############################
       # DEBUG level will log all requests and responses to and from the REST end points
@@ -97,6 +97,152 @@ data:
 
       role.user=sar-user
       role.admin=sar-admin
+    
+  olog.properties: |-
+      # the server port for the rest service
+      server.port: {{service.restport}}
+
+      # Options support for unsecure http
+      server.http.enable={{service.http.enable}}
+      server.http.port={{service.http.port}}
+
+      # Disable the spring banner
+      #spring.main.banner-mode=off
+
+      # suppress the logging from spring boot
+      # during debugging this should be set to DEBUG
+      logging.level.root=DEBUG
+      logging.level.org.springframework=DEBUG
+      logging.level.org.apache.catalina=DEBUG
+      logging.level.org.apache.kafka=DEBUG
+      logging.level.org.springframework.web=DEBUG
+      logging.level.org.springframework.security=DEBUG
+
+      spring.main.allow-bean-definition-overriding=true
+
+      ############## SSL - Configuration ##############
+      server.ssl.key-store-type=PKCS12
+      server.ssl.key-store=classpath:keystore/newcf.p12
+      server.ssl.key-store-password=password
+      server.ssl.key-alias=cf
+
+      security.require-ssl=true
+
+      ############## LDAP - External ##############
+      ldap.enabled = false
+      #ldap.urls = ldaps://ldap.cs.nsls2.local/dc=nsls2,dc=bnl,dc=gov
+      ldap.urls = ldaps://controlns02.nsls2.bnl.gov/dc=nsls2,dc=bnl,dc=gov
+      ldap.base.dn = dc=nsls2,dc=bnl,dc=gov
+      ldap.user.search.base=
+      # User search pattern, e.g. uid={0},ou=People. No default value as LDAP environment may not
+      # support user search by pattern.
+      ldap.user.dn.pattern=
+      # User search filter, e.g. (&(objectClass=person)(SAMAccountName={0})). No default value as LDAP environment
+      # may not support user search by filter.
+      ldap.user.search.filter=
+      ldap.groups.search.base = ou=Group
+      ldap.groups.search.pattern = (memberUid= {1})
+      # dn of manager account, may be required for group search
+      ldap.manager.dn=
+      # password of account
+      ldap.manager.password=
+
+      ############## LDAP - Embedded ##############
+      embedded_ldap.enabled = false
+      embedded_ldap.urls = ldap://localhost:8389/dc=olog,dc=local
+      embedded_ldap.base.dn = dc=olog,dc=local
+      embedded_ldap.user.dn.pattern = uid={0},ou=People
+      embedded_ldap.groups.search.base = ou=Group
+      embedded_ldap.groups.search.pattern = (memberUid= {1})
+      spring.ldap.embedded.ldif=classpath:olog.ldif
+      spring.ldap.embedded.base-dn=dc=olog,dc=local
+      spring.ldap.embedded.port=8389
+      spring.ldap.embedded.validation.enabled=false
+
+
+      ############## Demo Auth ##############
+      demo_auth.enabled = true
+
+      ############## Authorization Role --> group Mapping ##############
+      # Customize group names here
+      admin-groups=olog-admins,sys-admins,ADMIN
+      log-groups=olog-logs,USER
+      tag-groups=olog-tags,USER
+      property-groups=olog-properties,USER
+      logbook-groups=olog-logbooks,USER
+
+      ############################## Elastic Search ###############################
+
+      # Elasticsearch, by default, binds itself to the 0.0.0.0 address, and listens
+      # on port [9200-9300] for HTTP traffic and on port [9300-9400] for node-to-node
+      # communication. (the range means that if the port is busy, it will automatically
+      # try the next port).
+      # Set both 'bind_host' and 'publish_host':
+      #
+      elasticsearch.network.host: {{ .Values.elasticsearch.network.host }}
+
+      # Set a custom port to listen for HTTP traffic:
+      #
+      elasticsearch.http.port: {{ .Values.elasticsearch.http.port }}
+      elasticsearch.http.protocol: http
+
+      # Set the name of the elastic cluster
+      elasticsearch.cluster.name: elasticsearch
+
+      # The names of the index to use for olog
+      elasticsearch.tag.index: {{ include "phoebus-services-chart.fullname" . }}-olog_tags
+      elasticsearch.tag.type: {{ include "phoebus-services-chart.fullname" . }}-olog_tag
+
+      elasticsearch.logbook.index: {{ include "phoebus-services-chart.fullname" . }}-olog_logbooks
+      elasticsearch.logbook.type: {{ include "phoebus-services-chart.fullname" . }}-olog_logbook
+
+      elasticsearch.property.index: {{ include "phoebus-services-chart.fullname" . }}-olog_properties
+      elasticsearch.property.type: {{ include "phoebus-services-chart.fullname" . }}-olog_property
+
+      elasticsearch.log.index: {{ include "phoebus-services-chart.fullname" . }}-olog_logs
+      elasticsearch.log.type: {{ include "phoebus-services-chart.fullname" . }}-olog_log
+
+      elasticsearch.sequence.index: {{ include "phoebus-services-chart.fullname" . }}-olog_sequence
+      elasticsearch.sequence.type: {{ include "phoebus-services-chart.fullname" . }}-olog_sequence
+
+      ############################## Mongo gridfs client ###############################
+      mongo.database: {{ .Values.mongo.db }}
+      mongo.host: {{ .Values.mongo.host }}
+      mongo.port: {{ .Values.mongo.port }}
+
+
+      ############################## Spring Session repository configuration ##############################
+
+      # For debugging purposes, set the below to true
+      # spring.h2.console.enabled=true
+
+      # Sets the maximum inactive interval, MUST be in minutes. Defaults to 30 if not set here.
+      # If set to a negative value, the session never expires.
+      # spring.session.timeout=30
+
+      # URL for the H2 database. Defaults to in-memory, which means sessions are lost between restarts.
+      # Use the below example to define a file-based URL.
+      # spring.datasource.url=jdbc:h2:file:./olog-session;DB_CLOSE_ON_EXIT=TRUE
+
+      ############################## CORS settings ##############################
+      # Comma separated list of origins allowed to do CORS requests.
+      # Defaults to http://localhost:3000 (NodeJS development), but must be augmented
+      # with the origin(s) on which the web front-end is deployed.
+      #cors.allowed.origins=http://localhost:3000
+
+      ################## File upload and request size limits ##################
+      spring.servlet.multipart.max-file-size=50MB
+      spring.servlet.multipart.max-request-size=100MB
+
+      ################## List of "levels" ##################
+      levels=Urgent,Suggestion,Info,Request,Problem
+
+      ########### Elasticsearch "result set" sizes ##########
+      # By default Elasticsearch will return 10 items matching a query.
+      # This may bee too limiting, e.g. when client requests all tags.
+      elasticsearch.result.size.logbooks=10
+      elasticsearch.result.size.tags=10
+      elasticsearch.result.size.properties=10
 
 
 
