--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -51,7 +51,12 @@ spec:
               service:
                 name: {{ $fullName }}
                 port:
+                  {{- if .port }}
+                  number: {{ .port }}
+
+                  {{- else}}
                   number: {{ $svcPort }}
+                  {{-end }}
               {{- else }}
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
