handle multiple ingress

--- a/values.yaml
+++ b/values.yaml
@@ -54,6 +54,7 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+          port:
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
