--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -48,12 +48,14 @@ spec:
               protocol: TCP
             {{- end }}
             {{- if eq .Values.phoebusservice "olog" }}
+            
+            {{- if .Values.service.http.enable }}
+            - name: rest
+              containerPort: 8080
+              protocol: TCP
+            {{- else }}
             - name: rest
               containerPort: 8181
-              protocol: TCP
-            {{- if .Values.service.http.enable }}
-            - name: http
-              containerPort: 8080
               protocol: TCP
             {{- end }}
             {{- end }}
