--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -11,11 +11,11 @@ spec:
       targetPort: rest
       protocol: TCP
       name: rest
-    {{- if .Values.service.http.enable }}
-    - port: {{ .Values.service.http.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    # {{- if .Values.service.http.enable }}
+    # - port: {{ .Values.service.http.port }}
+    #   targetPort: http
+    #   protocol: TCP
+    #   name: http
     {{- end }}
   selector:
     {{- include "phoebus-services-chart.selectorLabels" . | nindent 4 }}
