--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,6 +33,20 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          
+          {{- if .Values.epicsConfiguration.name }}
+          envFrom:
+            - configMapRef:
+                name: {{ .Values.epicsConfiguration.name }}
+          {{- end }}
+
+          env:
+            {{- if .Values.epicsConfiguration.gateway }}
+            - name: EPICS_CA_ADDR_LIST
+              value: {{ .Values.epicsConfiguration.gateway | quote }}
+            - name: EPICS_CA_AUTO_ADDR_LIST
+              value: "NO"
+            {{- end }}
           volumeMounts:
             - name: config
               mountPath: /config
