--- a/values.yaml
+++ b/values.yaml
@@ -116,3 +116,7 @@ alarm:
   settings: "settings.xml"      # - Import preferences (PV connectivity) from property format file
   econfig: "econfig.xml"        # - Export alarm configuration to file
   iconfig: "config.xml"        # - Import alarm configuration from file
+
+epicsConfiguration:
+  name:    ## load the epicsConfigurationMap
+  gateway: ## if defined EPICS_CA_ADDR_LIST is overridden
