--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -3,6 +3,56 @@ kind: ConfigMap
 metadata:
   name: {{ include "phoebus-services-chart.fullname" . }}-config
 data:
+  alarmlogger.properties: |-
+    version=@project.version@
+    server.port=8080
+
+    spring.main.banner-mode=off
+    spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchRestClientAutoConfiguration
+    logging.level.root=WARN
+    alarm_topics={{.Values.alarm.config}}
+    es_host={{.Values.elasticsearch.network.host}}
+    es_port=9200
+    # Max default size for es queries
+    es_max_size=1000
+    # Set to 'true' if sniffing to be enabled to discover other cluster nodes
+    es_sniff=false
+
+    # When set to true, the service will automatically create the index templates needed
+    es_create_templates=true
+
+    # Kafka server location
+    bootstrap.servers={{.Values.kafka.host}}:{{.Values.kafka.port}}
+
+    # Kafka client properties file
+    kafka_properties=
+
+    # A flag indicating if the service should use index names based on date/time generated periodically based on date_span_units
+    use_dated_index_names=true
+
+    # The units of the indices date span: Days (D), Weeks(W), Months(M), Years(Y).
+    date_span_units=M
+
+    # Size of the thread pool for message and command loggers. Two threads per topic/configuration are required
+    thread_pool_size=4
+
+    ############################## REST Logging ###############################
+    # DEBUG level will log all requests and responses to and from the REST end points
+    logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
+
+    ############################## Index purge settings #######################
+    # How many indices to retain (e.g. if you have selected date_span_units as M and set the retain_indices_count to 6, then indices
+    # older than 6 months will be deleted.
+    # Number of days computed form this setting and date_span_units must be greater or equal to 100
+    # for automatic purge to be enabled.
+    retain_indices_count=0
+
+    # Cron expression used by Spring scheduler running automatic purge, default every Sunday at midnight.
+    # See https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/scheduling/support/CronExpression.html
+    # Incorrect syntax will fail service startup if retention_period_days >= 100.
+    purge_cron_expr=0 0 0 * * SUN
+    ##############################################################################
+
   saveandrestore.properties: |-
       logging.level.org.springframework={{ .Values.service.loglevel}}
       app.version=@project.version@
@@ -356,6 +406,7 @@ data:
       gidNumber: 24005
       memberUid: admin
   alarm.properties: |
+
       # Default java.util.logging configuration for alarm server
       #
       # Read in AlarmServerMain via LogManager
@@ -372,13 +423,7 @@ data:
       # Adding the logger name [%3$s] can be useful to determine which logger to _disable_,
       #
       java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s [%3$s] %5$s%6$s%n
-      #
-      # but otherwise the source is more useful to locate the originating code.
-      # java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s [%2$s] %5$s%6$s%n
-
-
-      # Throttle messages for certain packages
-      # Raise back up from 'WARNING' to debug
+      
       javax.activation.level = WARNING
       javax.mail.level = WARNING
       com.sun.mail.smtp.level = WARNING
