--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -25,13 +25,14 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "phoebus-services-chart.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.securityContext | nindent 8 }}
+      
       containers:
         - name: {{ .Chart.Name }}
           
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+{{  toYaml .Values.securityContext | indent 12}}
           resources:
 {{  toYaml .Values.resources | indent 12}}
           {{- if .Values.epicsConfiguration.name }}
